# ink-coop

./: .gitignore  .gitmodules  API_FALLBACK_IMPLEMENTATION.md  BIN_FONT_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  COMPLETION_REPORT.md  CONFIG_SERVER_README.md  DOCUMENT_INDEX_V2.md  ICON_MAPPING_GUIDE.md  ICON_OPERATION_CHANGES.md  ICON_QUICK_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PC端Icon加载完整解决方案.md  QUICKSTART_DUAL_MODE.md  QUICKSTART_FONT_CONVERSION.md  QUICK_REFERENCE.md  READ.md  README_COMPLETION.md  SD_FONT_QUICK_REFERENCE.md  TEST_CONFIG_SERVER.md  TTF_FONT_QUICK_REFERENCE.md  TTF_FONT_SYSTEM_GUIDE.md  WEB_CONFIG_SYSTEM.md  WEB_LAYOUT_STANDALONE_CREATED.md  WEB_LAYOUT_STANDALONE_GUIDE.md  build.ps1  compress_html.py  config_server.py  extract_html.py  flash_spiffs.ps1  init_resource.py  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old  start_config_server.bat  test_ttf_functions.html  ⚡_快速开始.md  使用指南-字体和图片库管理.md  (+18 more)
components/GXEPD2/: CMakeLists.txt
components/arduinoWebSockets/: CMakeLists.txt
components/arduinoWebSockets/src/: WebSockets.cpp  WebSocketsServer.cpp
components/grbl_esp32s3/: CMakeLists.txt  platformio.ini
components/grbl_esp32s3/Grbl_Esp32/: Grbl_Esp32.cpp  nofile.h
components/grbl_esp32s3/Grbl_Esp32/data/: compress.py  upload_index.html  upload_script.html  web_layout.html  web_layout_before.html
components/grbl_esp32s3/Grbl_Esp32/data/index.html/: index.html
components/grbl_esp32s3/Grbl_Esp32/src/: Config.h  Defaults.h  Error.cpp  Error.h  Exec.cpp  Exec.h  Grbl.cpp  Grbl.h  Machine.h  NutsBolts.cpp  NutsBolts.h  Pins.cpp  ProcessSettings.cpp  Protocol.cpp  Protocol.h  Report.cpp  Report.h  SDCard.cpp  Serial.cpp  Serial.h  Settings.cpp  Settings.h  SettingsDefinitions.cpp  SettingsDefinitions.h  System.cpp  System.h  Uart.cpp  Uart.h
components/grbl_esp32s3/Grbl_Esp32/src/BL_add/ink_screen/: button_driver.cpp  button_driver.h  chinese_font_cache.cpp  chinese_font_cache.h  chinese_font_cache_example.cpp  chinese_text_display.cpp  chinese_text_display.h  chinese_text_display_impl.h  image_loader.cpp  image_loader.h  ink_screen.cpp  ink_screen.h  json_layout.cpp  json_layout.h  multi_font_manager.cpp  multi_font_manager.h  onconfirm.cpp  onconfirm.h  prompt.cpp  prompt.h  sd_font_loader.cpp  sd_font_loader.h  sleep_interface.cpp  sleep_interface.h  ttf_font_api.cpp  ttf_font_api.h  ttf_font_manager.cpp  ttf_font_manager.h  web_layout.cpp  web_layout.h  word_book.cpp  word_book.h  wordbook_interface.cpp  (+1 more)
components/grbl_esp32s3/Grbl_Esp32/src/Machines/: inkScreen.h
components/grbl_esp32s3/Grbl_Esp32/src/WebUI/: Config.h  ESPResponse.cpp  ESPResponse.h  InputBuffer.h  NoFile.h  Serial2Socket.cpp  Serial2Socket.h  WebServer.cpp  WebServer.h  WebSettings.cpp  WebSettings.h  WifiConfig.cpp  WifiConfig.h  WifiServices.cpp
components/grbl_esp32s3/embedded/: out.h
components/grbl_esp32s3/libraries/ESP32SSDP/: ESP32SSDP.cpp
components/grbl_esp32s3/libraries/arduinoWebSockets/src/: WebSockets.cpp
(+1292 files in other folders)
